[tool.poetry]
name = "top500"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
xlrd = ">=0.9"
matplotlib = ">=1.5.1"
pandas = ">=0.17"
mechanize = "^0.4.5"
configparser = "^5.0.1"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
